[gd_scene load_steps=5 format=2]

[ext_resource path="res://Globals/EventManager.gd" type="Script" id=1]
[ext_resource path="res://Sounds/AlertLevel1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sounds/AlertLevel2.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/ItemDied.ogg" type="AudioStream" id=4]

[node name="EventManager" type="Node2D"]
script = ExtResource( 1 )

[node name="AlertLevel1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
max_distance = 3000.0
bus = "SFX"

[node name="AlertLevel2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 3000.0
bus = "SFX"

[node name="KillSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 3000.0
bus = "SFX"
